Rename eatxpacket to ea_txpacket for consistency.

First part of PR/46998